Fix crash on copyright view
Seems like in release builds we already have another id with 'copyright' in the resources. Rename the view id to 'my_copyright' to avoid duplicate ids.

--- a/versioninfo/src/main/res/layout/fragment_version_info.xml
+++ b/versioninfo/src/main/res/layout/fragment_version_info.xml
@@ -51,7 +51,7 @@
             tools:text="@string/version_template" />
 
         <TextView
-            android:id="@+id/copyright"
+            android:id="@+id/my_copyright"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="@string/copyright_template" />
