--- a/versioninfo/src/main/res/layout/fragment_version_info.xml
+++ b/versioninfo/src/main/res/layout/fragment_version_info.xml
@@ -14,6 +14,7 @@
   ~ limitations under the License.
   -->
 
+<!-- This fragment is loaded dynamically, hence Lint won't find it's usage -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -22,7 +23,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:ignore="UnusedResources">
 
     <ImageView
         android:id="@+id/image"
